@@ -6,9 +6,10 @@ siduxcc (0.6.11) UNRELEASED; urgency=low
   [ Fabian Wuertz ]
   * console.* moved form siduxcc_kde to libsiduxcc
   * hermes enlarged part 1/2
-  * hermes enlarged part 2/2 
+  * hermes enlarged part 2/2
+  * hermes: unique mode for right click 
 
- -- Fabian Wuertz <xadras@sidux.com>  Tue, 20 Nov 2007 00:19:34 +0100
+ -- Fabian Wuertz <xadras@sidux.com>  Tue, 20 Nov 2007 00:50:37 +0100
 
 siduxcc (0.6.10) unstable; urgency=low
 
